--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -207,4 +207,32 @@ footer {
         flex-direction: column;
         align-items: center;
     }
+    #homePage {
+        height: 568px;
+    }
+
+    nav {
+        height: 50px;
+        line-height: 50px;
+
+    }
+
+    nav a {
+        font-size: 16px;
+    }
+
+    #logo-name a {
+        font-size: 22px;
+    }
+
+    footer {
+        height: 110px;
+        background-color: #0f1819;
+        color: white;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        font-size: 10px;
+    }
 }
